--- a/configuracao_do_meu_computador.html
+++ b/configuracao_do_meu_computador.html
@@ -6,7 +6,7 @@
     <title>Configuração</title>
 </head>
 <body>
-    <h1 id="configuracao-do-meu-computador">Configuração do meu computador</h1>
+    <h2>Configuração do meu computador</h1>
     <h2 id="introducao">Introdução</h2>
     <p>Essa pagina contem a configuração do meu computador de acordo com a data, sempre que mudar farei a atualização mantendo a antiga abaixo da nova.</p>
     <h2 id="configuracao-atual">Configuração atual</h2>
